# glpi-mcp

./: .dockerignore  .env.example  Dockerfile  README.md  compose.yaml  pyproject.toml
app/: auth.py  database.py  server.py  sql_guard.py
tests/: test_auth.py  test_sql_guard.py
