[project]
name = "glpi-mcp"
version = "0.1.0"
description = "Servidor MCP para consultas ao banco MariaDB do GLPI"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "mariadb>=1.1.14,<2",
    "mcp[cli]>=1.27.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
